@@ -457,6 +457,7 @@ Qundis Q caloric (qcaloric)
 Sontex 868 (sontex868)
 Techem FHKV data II/III (fhkvdataiii)
 Siemens WHE542 (whe5x)
+BMeters Hydroclima RFM (hydroclima)
 
 Supported heat meters:
 Heat meter Techem Compact V / Compact Ve (compact5) (non-standard protocol)
